_build/html/reports/Plot.log
Traceback (most recent call last):
  File "c:\users\sk260350\anaconda3\envs\wintest\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "c:\users\sk260350\anaconda3\envs\wintest\lib\site-packages\nbclient\client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\sk260350\anaconda3\envs\wintest\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\sk260350\anaconda3\envs\wintest\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\sk260350\anaconda3\envs\wintest\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "c:\users\sk260350\anaconda3\envs\wintest\lib\site-packages\nbclient\client.py", line 541, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "c:\users\sk260350\anaconda3\envs\wintest\lib\site-packages\nbclient\client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "c:\users\sk260350\anaconda3\envs\wintest\lib\site-packages\nbclient\client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from math import log
nMax=100b
logN=[1+log(n) for n in range(1,nMax+1)]
logNPlus1=[log(n+1) for n in range(1,nMax+1)]

Hn=[1./1.]

for k in range(2,nMax+1):
    Hn.append(Hn[-1]+1./k)
#Pour créer le DataFrame, il faut lui donner une matrice de la bonne taille
data=[Hn,logN,logNPlus1]
#il faut transposer le dataFrame (pas dans le bon sens)
df=pd.DataFrame(data=data).T
# df.describe() : affiche une description du DataFrame
df.columns=["$H_n$","1+ln(n)","ln(n+1)"]
df.iplot(kind='scatter',title='Différentes suites')
------------------

[1;36m  File [1;32m"<ipython-input-2-71431b94ee8f>"[1;36m, line [1;32m2[0m
[1;33m    nMax=100b[0m
[1;37m            ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-2-71431b94ee8f>, line 2)

